--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.18.2"
   },
   "keywords": []
 }
