--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Gaspare Bastone",  
+  "author": "Gaspare Bastone",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.5",
     "express": "^4.15.2"
-  },
-  "devDependencies": {
-
   },
   "keywords": []
 }
